@@ -1,6 +1,13 @@
 FlightPath 5.x Changelog
 ========================
 
+
+2018-04-14   
+  Rolled back a modification made to AdvisingScreen, as described in ticket 2291, comment #36, and implemented
+  new changes from comment #42 (special thanks to Logan Buth).  This was to deal with a subtle bug involving a
+  repeated course, where one of the attempts was substituted, the other not.
+
+
 2018-04-11
   Fixed an issue with "clean URLs" when site is hosted on a bare domain.
   
